--- a/src/Defaults.plist
+++ b/src/Defaults.plist
@@ -29,5 +29,7 @@
     <string>Top-Stretch</string>
     <key>VisorOnEverySpace</key>
     <true/>
+    <key>PinVisorDefault</key>
+    <true/>
 </dict>
 </plist>
